AlbertV Tutor setting compiler compliance level to 1.4
git-svn-id: https://dev.geogebra.org/svn/trunk/geogebra@1236 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e